[package]
name = "onthehour"
version = "4.0.0"
authors = ["Richard Dallaway <richard@dallaway.com>"]
edition = "2021"

[dependencies]
chrono = "0.4"
chrono-tz = "0.6"
envy = "0.4.1"
serde = "1.0"
serde_derive = "1.0"
twitter-v2 = {version = "0.1.7", default-features = false, features=["rustls-tls"] }
tokio = { version = "1.0", default-features = false, features = ["sync", "macros", "rt"] }
